# RT_System_Design_Numerical_Methods

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.BSD  README.md
CompareWithBaseline/: ClearYechengRecordsInMyRepo.py  ConvertYechengDataset.py  EditYecheng_m_file.py  LoadYechengRecordTo.py  change_Yecheng_upper_bound.py  clear_result_files.py  edit_yaml.py  transform_Yecheng_to_implicit_deadline.py  visualize_SA.sh
CompareWithBaseline/ControlPerformance/: ClearYechengRepoRes.sh  CompareControlLL.sh  Visualize_performance.py  draw_box_plot.py  parameters.yaml  time_task_number.txt
CompareWithBaseline/DAGPerformance/: CompareEnergyDAG.sh  GenerateTaskSet.sh  LoadSenDAGRecord.py  LoadSenDAGRecordAll.sh  Visualize_performance.py  parameters.yaml  time_task_number.txt
CompareWithBaseline/EnergyPerformance/: ClearYechengRepoRes.sh  CompareEnergyLL.sh  CompareEnergyLL2.sh  Remove_file_suffix.py  Visualize_performance.py  Visualize_performance_time.py  parameters.yaml  time_task_number.txt
CompareWithBaseline/FeasibleInitialRatio/: ClearResults.sh  FeasibleRatio.txt  GenerateInitialFeasibleRatio.sh
CompareWithBaseline/Optimizer/: CompareOptimizer.sh  Visualize_performance.py  parameters.yaml  time_task_number.txt
DrawDAG/: currGraph.gv  drawDBF.py  graph.dot  sdot.sh  showGraph.py  sortParameters.py  utils.py
TaskData/: AddProcessorId.py  ClearResFiles.py  periodic-dag-Nasri-set-3-014-syntheticJobs.yaml  taskset.yaml  test2.yaml  test_dag_n10_v1.csv  test_dag_n5_v1.csv  test_dag_n5_v2.csv  test_dag_n5_v3.csv  test_n10_v1.csv  test_n10_v1.yaml  test_n10_v10.csv  test_n10_v11.csv  test_n10_v2.csv  test_n10_v2.yaml  test_n10_v3.csv  test_n10_v3.yaml  test_n10_v4.csv  test_n10_v4.yaml  test_n10_v5.csv  test_n10_v6.csv  test_n10_v7.csv  test_n10_v8.csv  test_n10_v9.csv  test_n11_v1.csv  test_n11_v2.csv  test_n15_v1.csv  test_n20_v1.csv  test_n20_v1.yaml  test_n20_v10.csv  test_n20_v11.csv  test_n20_v12.csv  test_n20_v13.csv  test_n20_v14.csv  test_n20_v15.csv  test_n20_v16.csv  test_n20_v17.csv  test_n20_v18.csv  test_n20_v19.csv  test_n20_v2.csv  (+95 more)
TaskData/N10/: periodic-dag-Narsi-set-10-000-syntheticJobs.yaml  periodic-dag-Narsi-set-10-000-syntheticJobs.yaml_IPM_Res.txt  periodic-dag-Narsi-set-10-000-syntheticJobs.yaml_SA_Res.txt  (+522 more)
Visualization/: Modify_task_number.py  Running_time_task_number.txt  data_buffer_energy_task_number.txt  energy_task_number.txt  schedulability_task_number.py  time_task_number.txt  util_visua.py  visualize_task_number.sh
np-schedulability-analysis/: path_goes_here_dag.csv  path_goes_here_task.csv  path_goes_here_task.rta.csv  path_goes_here_taskBase.rta.csv
pictures/: main_framework.vsdx  trust_region_opt.vsdx
sources/: BatchControlOptimize.h  BatchOptimize.h  BatchTestutils.h  CMakeLists.txt  LLBatchCompare.h  MatrixConvenient.h  argparse.hpp  outputDAG.csv  outputTask.csv  parameters.yaml
tests/: BatchControl.cpp  CMakeLists.txt  DAGBatch.cpp  FindUnsustainableCase.cpp  GenerateTaskSet.cpp  LLBatch.cpp  LLBatchCompare.cpp  VerfiyTaskSetSchedulability.cpp  tBF.cpp  testComputationFactor.cpp  testControlFactors.cpp  testControlFactors2.cpp  testEnergy.cpp  testEnergyOpt2.cpp  testEnergyOptFactors.cpp  testEstimateFeasibleSolutionRatio.cpp  testFGFormulations.cpp  testFindInfeasibleStrategyFail.cpp  testFonseca2019.cpp  testFonseca2019IO.cpp  testHeader.cpp  testIfopt.cpp  testNarsi19.cpp  testOpt.cpp  testOptSingle.cpp  testOptSingleDAGRunSingle.cpp  testOptimizePeriod.cpp  testOptimizeSARunSingle.cpp  testPeriodFactorsOpt2.cpp  testResponseTimeAnalysis.cpp  testTasks.cpp
(+8435 files in other folders)
